--- a/gmail/test-output/old/Default suite/reporter-output.html
+++ b/gmail/test-output/old/Default suite/reporter-output.html
@@ -1,3 +1,11 @@
-<h2>Reporter output</h2><table><tr><td>print in reporter</td></tr>
-<tr><td>print in reporter and console</td></tr>
+<h2>Reporter output</h2><table><tr><td>execute bust method</td></tr>
+<tr><td>execute bust method</td></tr>
+<tr><td>execute bust method</td></tr>
+<tr><td>execute must method</td></tr>
+<tr><td>execute test method</td></tr>
+<tr><td>execute test method</td></tr>
+<tr><td>execute lust method</td></tr>
+<tr><td>execute lust method</td></tr>
+<tr><td>execute lust method</td></tr>
+<tr><td>execute lust method</td></tr>
 </table>
