--- a/gmail/test-output/old/Default suite/methods.html
+++ b/gmail/test-output/old/Default suite/methods.html
@@ -1,10 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7ffa75">  <td>21/06/25 18:33:33</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Demo1.test1()[pri:0, instance:testng.Demo1@77eca502]">test1</td> 
-  <td>main@1304117943</td>   <td></td> </tr>
-<tr bgcolor="7ffa75">  <td>21/06/25 18:33:33</td>   <td>3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Demo1.test2()[pri:0, instance:testng.Demo1@77eca502]">test2</td> 
-  <td>main@1304117943</td>   <td></td> </tr>
-<tr bgcolor="7ffa75">  <td>21/06/25 18:33:33</td>   <td>-9</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Demo1.test()[pri:0, instance:testng.Demo1@77eca502]">test</td> 
-  <td>main@1304117943</td>   <td></td> </tr>
+<tr bgcolor="7ffa75">  <td>21/06/26 06:37:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Demo3.bust()[pri:2, instance:testng.Demo3@2e222612]">bust</td> 
+  <td>main@1132307065</td>   <td></td> </tr>
+<tr bgcolor="7ffa75">  <td>21/06/26 06:37:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Demo3.bust()[pri:2, instance:testng.Demo3@2e222612]">bust</td> 
+  <td>main@1132307065</td>   <td></td> </tr>
+<tr bgcolor="7ffa75">  <td>21/06/26 06:37:55</td>   <td>15</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Demo3.lust()[pri:5, instance:testng.Demo3@2e222612]">lust</td> 
+  <td>main@1132307065</td>   <td></td> </tr>
+<tr bgcolor="7ffa75">  <td>21/06/26 06:37:55</td>   <td>15</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Demo3.lust()[pri:5, instance:testng.Demo3@2e222612]">lust</td> 
+  <td>main@1132307065</td>   <td></td> </tr>
+<tr bgcolor="7ffa75">  <td>21/06/26 06:37:55</td>   <td>15</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Demo3.lust()[pri:5, instance:testng.Demo3@2e222612]">lust</td> 
+  <td>main@1132307065</td>   <td></td> </tr>
+<tr bgcolor="7ffa75">  <td>21/06/26 06:37:55</td>   <td>1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Demo3.must()[pri:3, instance:testng.Demo3@2e222612]">must</td> 
+  <td>main@1132307065</td>   <td></td> </tr>
+<tr bgcolor="7ffa75">  <td>21/06/26 06:37:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Demo3.bust()[pri:2, instance:testng.Demo3@2e222612]">bust</td> 
+  <td>main@1132307065</td>   <td></td> </tr>
+<tr bgcolor="7ffa75">  <td>21/06/26 06:37:55</td>   <td>15</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Demo3.lust()[pri:5, instance:testng.Demo3@2e222612]">lust</td> 
+  <td>main@1132307065</td>   <td></td> </tr>
+<tr bgcolor="7ffa75">  <td>21/06/26 06:37:55</td>   <td>6</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Demo3.test()[pri:4, instance:testng.Demo3@2e222612]">test</td> 
+  <td>main@1132307065</td>   <td></td> </tr>
+<tr bgcolor="7ffa75">  <td>21/06/26 06:37:55</td>   <td>6</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Demo3.test()[pri:4, instance:testng.Demo3@2e222612]">test</td> 
+  <td>main@1132307065</td>   <td></td> </tr>
 </table>
